--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -219,12 +219,13 @@
        "29    Delgado   Vanesa"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#primer comentario usando github \n",
     "import pandas as pd\n",
     "\n",
     "columnas = [\"Apellido\", \"Nombre\"]\n",
