tercer comentario, segunda modificacion

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -28,6 +28,7 @@
        "      <th></th>\n",
        "      <th>Apellido</th>\n",
        "      <th>Nombre</th>\n",
+       "      <th>Aficion principal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -35,188 +36,218 @@
        "      <th>0</th>\n",
        "      <td>Molina</td>\n",
        "      <td>Antonio</td>\n",
+       "      <td>Basquet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Muñoz</td>\n",
        "      <td>Liliana</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Rubio</td>\n",
        "      <td>Ana</td>\n",
+       "      <td>Informatica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Castillo</td>\n",
        "      <td>Daniel</td>\n",
+       "      <td>Ajedrez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Garrido</td>\n",
        "      <td>Luis</td>\n",
+       "      <td>Voley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Medina</td>\n",
        "      <td>Laura</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Navarro</td>\n",
        "      <td>Julio</td>\n",
+       "      <td>Ajedrez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Morales</td>\n",
        "      <td>Jorge</td>\n",
+       "      <td>Karaoke</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Castro</td>\n",
        "      <td>Tania</td>\n",
+       "      <td>Judo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Reyes</td>\n",
        "      <td>Cintia</td>\n",
+       "      <td>Musica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Prado</td>\n",
        "      <td>Ana</td>\n",
+       "      <td>Reposteria</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Chavez</td>\n",
        "      <td>Jose</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Vega</td>\n",
        "      <td>Carlos</td>\n",
+       "      <td>Informatica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Moreno</td>\n",
        "      <td>Julia</td>\n",
+       "      <td>Basquet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Escobar</td>\n",
        "      <td>Pedro</td>\n",
+       "      <td>Karaoke</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Alvarado</td>\n",
        "      <td>Ester</td>\n",
+       "      <td>Musica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Zegarra</td>\n",
        "      <td>Alberto</td>\n",
+       "      <td>Judo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Costa</td>\n",
        "      <td>Tatiana</td>\n",
+       "      <td>Teatro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Borja</td>\n",
        "      <td>Pablo</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Romero</td>\n",
        "      <td>Marta</td>\n",
+       "      <td>Karaoke</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Gomez</td>\n",
        "      <td>Jorge</td>\n",
+       "      <td>Lectura</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Ruiz</td>\n",
        "      <td>Rosa</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Mejia</td>\n",
        "      <td>Jesica</td>\n",
+       "      <td>Voley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Serrano</td>\n",
        "      <td>Ursula</td>\n",
+       "      <td>Judo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Jimenez</td>\n",
        "      <td>Luis</td>\n",
+       "      <td>Ajedrez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Vazquez</td>\n",
        "      <td>Jose</td>\n",
+       "      <td>Voley</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Fernandez</td>\n",
        "      <td>Miguel</td>\n",
+       "      <td>Ajedrez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Ramos</td>\n",
        "      <td>Raul</td>\n",
+       "      <td>Ajedrez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Rodriguez</td>\n",
        "      <td>Susana</td>\n",
+       "      <td>Karaoke</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Delgado</td>\n",
        "      <td>Vanesa</td>\n",
+       "      <td>Basquet</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Apellido   Nombre\n",
-       "0      Molina  Antonio\n",
-       "1       Muñoz  Liliana\n",
-       "2       Rubio      Ana\n",
-       "3    Castillo   Daniel\n",
-       "4     Garrido     Luis\n",
-       "5      Medina    Laura\n",
-       "6     Navarro    Julio\n",
-       "7     Morales    Jorge\n",
-       "8      Castro    Tania\n",
-       "9       Reyes   Cintia\n",
-       "10      Prado      Ana\n",
-       "11     Chavez     Jose\n",
-       "12       Vega   Carlos\n",
-       "13     Moreno    Julia\n",
-       "14    Escobar    Pedro\n",
-       "15   Alvarado    Ester\n",
-       "16    Zegarra  Alberto\n",
-       "17      Costa  Tatiana\n",
-       "18      Borja    Pablo\n",
-       "19     Romero    Marta\n",
-       "20      Gomez    Jorge\n",
-       "21       Ruiz     Rosa\n",
-       "22      Mejia   Jesica\n",
-       "23    Serrano   Ursula\n",
-       "24    Jimenez     Luis\n",
-       "25    Vazquez     Jose\n",
-       "26  Fernandez   Miguel\n",
-       "27      Ramos     Raul\n",
-       "28  Rodriguez   Susana\n",
-       "29    Delgado   Vanesa"
+       "     Apellido   Nombre Aficion principal\n",
+       "0      Molina  Antonio           Basquet\n",
+       "1       Muñoz  Liliana            Futbol\n",
+       "2       Rubio      Ana       Informatica\n",
+       "3    Castillo   Daniel           Ajedrez\n",
+       "4     Garrido     Luis             Voley\n",
+       "5      Medina    Laura            Futbol\n",
+       "6     Navarro    Julio           Ajedrez\n",
+       "7     Morales    Jorge           Karaoke\n",
+       "8      Castro    Tania              Judo\n",
+       "9       Reyes   Cintia            Musica\n",
+       "10      Prado      Ana        Reposteria\n",
+       "11     Chavez     Jose            Futbol\n",
+       "12       Vega   Carlos       Informatica\n",
+       "13     Moreno    Julia           Basquet\n",
+       "14    Escobar    Pedro           Karaoke\n",
+       "15   Alvarado    Ester            Musica\n",
+       "16    Zegarra  Alberto              Judo\n",
+       "17      Costa  Tatiana            Teatro\n",
+       "18      Borja    Pablo            Futbol\n",
+       "19     Romero    Marta           Karaoke\n",
+       "20      Gomez    Jorge           Lectura\n",
+       "21       Ruiz     Rosa            Futbol\n",
+       "22      Mejia   Jesica             Voley\n",
+       "23    Serrano   Ursula              Judo\n",
+       "24    Jimenez     Luis           Ajedrez\n",
+       "25    Vazquez     Jose             Voley\n",
+       "26  Fernandez   Miguel           Ajedrez\n",
+       "27      Ramos     Raul           Ajedrez\n",
+       "28  Rodriguez   Susana           Karaoke\n",
+       "29    Delgado   Vanesa           Basquet"
       ]
      },
      "execution_count": 1,
@@ -228,16 +259,20 @@
     "#primer comentario usando github \n",
     "import pandas as pd\n",
     "\n",
-    "columnas = [\"Apellido\", \"Nombre\"]\n",
-    "apellidos = [\"Molina\", \"Muñoz\", \"Rubio\", \"Castillo\", \"Garrido\", \"Medina\", \"Navarro\", \"Morales\", \"Castro\", \"Reyes\", \"Prado\", \"Chavez\",\n",
-    "             \"Vega\", \"Moreno\", \"Escobar\", \"Alvarado\", \"Zegarra\", \"Costa\", \"Borja\", \"Romero\", \"Gomez\", \"Ruiz\", \"Mejia\", \"Serrano\", \n",
-    "             \"Jimenez\", \"Vazquez\", \"Fernandez\", \"Ramos\", \"Rodriguez\", \"Delgado\"]\n",
-    "nombres = [\"Antonio\", \"Liliana\", \"Ana\", \"Daniel\", \"Luis\", \"Laura\", \"Julio\", \"Jorge\", \"Tania\", \"Cintia\", \"Ana\", \"Jose\", \"Carlos\", \"Julia\",\n",
-    "           \"Pedro\", \"Ester\", \"Alberto\", \"Tatiana\", \"Pablo\", \"Marta\", \"Jorge\", \"Rosa\", \"Jesica\", \"Ursula\", \"Luis\", \"Jose\", \"Miguel\",\n",
-    "           \"Raul\", \"Susana\", \"Vanesa\"]\n",
+    "columnas = [\"Apellido\", \"Nombre\", \"Aficion principal\"]\n",
+    "apellidos = [\"Molina\", \"Muñoz\", \"Rubio\", \"Castillo\", \"Garrido\", \"Medina\", \"Navarro\", \"Morales\", \"Castro\", \"Reyes\", \"Prado\",\n",
+    "             \"Chavez\", \"Vega\", \"Moreno\", \"Escobar\", \"Alvarado\", \"Zegarra\", \"Costa\", \"Borja\", \"Romero\", \"Gomez\", \"Ruiz\", \n",
+    "             \"Mejia\", \"Serrano\", \"Jimenez\", \"Vazquez\", \"Fernandez\", \"Ramos\", \"Rodriguez\", \"Delgado\"]\n",
+    "nombres = [\"Antonio\", \"Liliana\", \"Ana\", \"Daniel\", \"Luis\", \"Laura\", \"Julio\", \"Jorge\", \"Tania\", \"Cintia\", \"Ana\", \"Jose\", \n",
+    "           \"Carlos\", \"Julia\", \"Pedro\", \"Ester\", \"Alberto\", \"Tatiana\", \"Pablo\", \"Marta\", \"Jorge\", \"Rosa\", \"Jesica\", \n",
+    "           \"Ursula\", \"Luis\", \"Jose\", \"Miguel\", \"Raul\", \"Susana\", \"Vanesa\"]\n",
+    "aficion_principal = [\"Basquet\", \"Futbol\", \"Informatica\", \"Ajedrez\", \"Voley\", \"Futbol\", \"Ajedrez\", \"Karaoke\", \"Judo\",\n",
+    "                     \"Musica\", \"Reposteria\", \"Futbol\", \"Informatica\", \"Basquet\", \"Karaoke\", \"Musica\", \"Judo\", \"Teatro\",\n",
+    "                     \"Futbol\", \"Karaoke\", \"Lectura\", \"Futbol\", \"Voley\", \"Judo\", \"Ajedrez\", \"Voley\", \"Ajedrez\", \"Ajedrez\",\n",
+    "                     \"Karaoke\", \"Basquet\"]\n",
     "\n",
     "\n",
-    "datos = list(zip(apellidos, nombres))\n",
+    "datos = list(zip(apellidos, nombres, aficion_principal))\n",
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n"
