--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -7,340 +7,16 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Apellido</th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Aficion principal</th>\n",
-       "      <th>Peso(Kg)</th>\n",
-       "      <th>Estatura(m)</th>\n",
-       "      <th>Sexo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Alvarado</td>\n",
-       "      <td>Ester</td>\n",
-       "      <td>Musica</td>\n",
-       "      <td>66</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Borja</td>\n",
-       "      <td>Pablo</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Castillo</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Castro</td>\n",
-       "      <td>Tania</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>71</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Chavez</td>\n",
-       "      <td>Jose</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Costa</td>\n",
-       "      <td>Tatiana</td>\n",
-       "      <td>Teatro</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Delgado</td>\n",
-       "      <td>Vanesa</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>63</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Escobar</td>\n",
-       "      <td>Pedro</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.58</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Fernandez</td>\n",
-       "      <td>Miguel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Garrido</td>\n",
-       "      <td>Luis</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>74</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Gomez</td>\n",
-       "      <td>Jorge</td>\n",
-       "      <td>Lectura</td>\n",
-       "      <td>66</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Jimenez</td>\n",
-       "      <td>Luis</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Medina</td>\n",
-       "      <td>Laura</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>71</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Mejia</td>\n",
-       "      <td>Jesica</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.74</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Molina</td>\n",
-       "      <td>Antonio</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1.81</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Morales</td>\n",
-       "      <td>Jorge</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>77</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Moreno</td>\n",
-       "      <td>Julia</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Muñoz</td>\n",
-       "      <td>Liliana</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Navarro</td>\n",
-       "      <td>Julio</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Prado</td>\n",
-       "      <td>Ana</td>\n",
-       "      <td>Reposteria</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Ramos</td>\n",
-       "      <td>Raul</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.64</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Reyes</td>\n",
-       "      <td>Cintia</td>\n",
-       "      <td>Musica</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Rodriguez</td>\n",
-       "      <td>Susana</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Romero</td>\n",
-       "      <td>Marta</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Rubio</td>\n",
-       "      <td>Ana</td>\n",
-       "      <td>Informatica</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.63</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Ruiz</td>\n",
-       "      <td>Rosa</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Serrano</td>\n",
-       "      <td>Ursula</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Vazquez</td>\n",
-       "      <td>Jose</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1.79</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Vega</td>\n",
-       "      <td>Carlos</td>\n",
-       "      <td>Informatica</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1.60</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Zegarra</td>\n",
-       "      <td>Alberto</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Apellido   Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "15   Alvarado    Ester            Musica        66         1.69    F\n",
-       "18      Borja    Pablo            Futbol        70         1.73    M\n",
-       "3    Castillo   Daniel           Ajedrez        75         1.61    M\n",
-       "8      Castro    Tania              Judo        71         1.73    F\n",
-       "11     Chavez     Jose            Futbol        72         1.77    M\n",
-       "17      Costa  Tatiana            Teatro        62         1.62    F\n",
-       "29    Delgado   Vanesa           Basquet        63         1.77    F\n",
-       "14    Escobar    Pedro           Karaoke        62         1.58    M\n",
-       "26  Fernandez   Miguel           Ajedrez        72         1.67    M\n",
-       "4     Garrido     Luis             Voley        74         1.86    M\n",
-       "20      Gomez    Jorge           Lectura        66         1.62    M\n",
-       "24    Jimenez     Luis           Ajedrez        70         1.65    M\n",
-       "5      Medina    Laura            Futbol        71         1.76    F\n",
-       "22      Mejia   Jesica             Voley        68         1.74    F\n",
-       "0      Molina  Antonio           Basquet        82         1.81    M\n",
-       "7     Morales    Jorge           Karaoke        77         1.65    M\n",
-       "13     Moreno    Julia           Basquet        68         1.76    F\n",
-       "1       Muñoz  Liliana            Futbol        59         1.65    F\n",
-       "6     Navarro    Julio           Ajedrez        62         1.68    M\n",
-       "10      Prado      Ana        Reposteria        68         1.71    F\n",
-       "27      Ramos     Raul           Ajedrez        70         1.64    M\n",
-       "9       Reyes   Cintia            Musica        62         1.72    F\n",
-       "28  Rodriguez   Susana           Karaoke        64         1.68    F\n",
-       "19     Romero    Marta           Karaoke        65         1.61    F\n",
-       "2       Rubio      Ana       Informatica        62         1.63    F\n",
-       "21       Ruiz     Rosa            Futbol        59         1.65    F\n",
-       "23    Serrano   Ursula              Judo        64         1.72    F\n",
-       "25    Vazquez     Jose             Voley        67         1.79    M\n",
-       "12       Vega   Carlos       Informatica        65         1.60    M\n",
-       "16    Zegarra  Alberto              Judo        65         1.67    M"
+       "count    15.000000\n",
+       "mean      1.688667\n",
+       "std       0.084250\n",
+       "min       1.580000\n",
+       "25%       1.630000\n",
+       "50%       1.670000\n",
+       "75%       1.750000\n",
+       "max       1.860000\n",
+       "Name: Estatura(m), dtype: float64"
       ]
      },
      "execution_count": 6,
@@ -373,14 +49,19 @@
     "# construimos el dataframe con las columnas dadas y mediante la funcion zip de python enlazamos dichas listas de columnas creadas\n",
     "datos = list(zip(apellidos, nombres, aficion_principal, peso, estatura, sexo))\n",
     "df = pd.DataFrame(datos, columns=columnas)\n",
-    "\n",
-    "# Nos saldra el dataframe original en el orden tal como lo escribimos originalmente\n",
     "df\n",
     "\n",
-    "# Ahora lo ordenamos alfabeticamente por la columna 'Apellido'\n",
-    "df = df.sort_values(by='Apellido')\n",
-    "df\n",
-    "\n"
+    "# del dataframe original obtenemos de la columna sexo, solo el grupo de hombres\n",
+    "df = df.groupby('Sexo').get_group('M')\n",
+    "\n",
+    "# del grupo anterior (del grupo hombres) obtenemos de la columna 'Estatura(cm)' el promedio\n",
+    "df['Estatura(m)'].mean()\n",
+    "# del mismo grupo obtenemos de la columna estatura el valor maximo\n",
+    "df['Estatura(m)'].max()\n",
+    "# del mismo grupo obtenemos de la columna estatura la mediana\n",
+    "df['Estatura(m)'].median()\n",
+    "# del mismo grupo de la columna estatura, con la funcion describe() obtenemos el min y max, la desviacion estandar y sus quartiles \n",
+    "df['Estatura(m)'].describe()\n"
    ]
   }
  ],
