viendo mas funciones como shape, head, tail, loc

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,24 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Apellido</th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Aficion principal</th>\n",
+       "      <th>Peso(Kg)</th>\n",
+       "      <th>Estatura(m)</th>\n",
+       "      <th>Sexo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>Daniel</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Navarro</td>\n",
+       "      <td>Julio</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Jimenez</td>\n",
+       "      <td>Luis</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Fernandez</td>\n",
+       "      <td>Miguel</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Ramos</td>\n",
+       "      <td>Raul</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "count    15.000000\n",
-       "mean      1.688667\n",
-       "std       0.084250\n",
-       "min       1.580000\n",
-       "25%       1.630000\n",
-       "50%       1.670000\n",
-       "75%       1.750000\n",
-       "max       1.860000\n",
-       "Name: Estatura(m), dtype: float64"
+       "     Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "3    Castillo  Daniel           Ajedrez        75         1.61    M\n",
+       "6     Navarro   Julio           Ajedrez        62         1.68    M\n",
+       "24    Jimenez    Luis           Ajedrez        70         1.65    M\n",
+       "26  Fernandez  Miguel           Ajedrez        72         1.67    M\n",
+       "27      Ramos    Raul           Ajedrez        70         1.64    M"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,17 +125,41 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "# del dataframe original obtenemos de la columna sexo, solo el grupo de hombres\n",
-    "df = df.groupby('Sexo').get_group('M')\n",
+    "# nos da el numero de filas y columnas del dataframe df en este caso (30, 6)\n",
+    "df.shape\n",
     "\n",
-    "# del grupo anterior (del grupo hombres) obtenemos de la columna 'Estatura(cm)' el promedio\n",
-    "df['Estatura(m)'].mean()\n",
-    "# del mismo grupo obtenemos de la columna estatura el valor maximo\n",
-    "df['Estatura(m)'].max()\n",
-    "# del mismo grupo obtenemos de la columna estatura la mediana\n",
-    "df['Estatura(m)'].median()\n",
-    "# del mismo grupo de la columna estatura, con la funcion describe() obtenemos el min y max, la desviacion estandar y sus quartiles \n",
-    "df['Estatura(m)'].describe()\n"
+    "# nos da la informacion de las 5 primeras filas\n",
+    "df.head()\n",
+    "\n",
+    "# si queremos la info de p.e. 8 primeras filas debemos escribir df.head(8)\n",
+    "df.head(8)\n",
+    "\n",
+    "# nos da la info de las 5 ultimas filas\n",
+    "df.tail()\n",
+    "\n",
+    "# si queremos la info de p.e de las 10 ultimas filas debemos colocar df.tail(10)\n",
+    "df.tail(10)\n",
+    "\n",
+    "# nos da la info de toda la fila con el valor de indice 5\n",
+    "df.loc[5]\n",
+    "\n",
+    "# nos da la info de las filas en un intervalo de indices, en este caso entre el indice 5 al indice 10\n",
+    "df.loc[5:10]\n",
+    "\n",
+    "# nos da la info de todas las filas pero en el intervalo entre las columnas 'Apellido' y 'Aficion principal'\n",
+    "df.loc[:, 'Apellido':'Aficion principal']\n",
+    "\n",
+    "# nos da la info desde la fila de indice 10 a indice 15 de las columnas 'Aficion principal' y 'Estatura(m)'\n",
+    "df.loc[10:15, ['Aficion principal', 'Estatura(m)']]\n",
+    "\n",
+    "# nos da la info de quienes tienen como 'Aficion principal' al Ajedrez en valores booleanos (True o False)\n",
+    "df.loc[:, 'Aficion principal'] == 'Ajedrez'\n",
+    "\n",
+    "# ahora si queremos la info con todos los datos de los que tienen como 'Aficion principal' al Ajedrez\n",
+    "df1 = df.loc[:, 'Aficion principal'] == 'Ajedrez'\n",
+    "df2 = df.loc[df1]\n",
+    "df2\n",
+    "\n"
    ]
   }
  ],
