filtrado de datos con expresiones logicas y comparativas

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,64 +36,144 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Castillo</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1.61</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Molina</td>\n",
+       "      <td>Antonio</td>\n",
+       "      <td>Basquet</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1.81</td>\n",
        "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Navarro</td>\n",
-       "      <td>Julio</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Jimenez</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Garrido</td>\n",
        "      <td>Luis</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.65</td>\n",
+       "      <td>Voley</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1.86</td>\n",
        "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Fernandez</td>\n",
-       "      <td>Miguel</td>\n",
-       "      <td>Ajedrez</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Medina</td>\n",
+       "      <td>Laura</td>\n",
+       "      <td>Futbol</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Castro</td>\n",
+       "      <td>Tania</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Reyes</td>\n",
+       "      <td>Cintia</td>\n",
+       "      <td>Musica</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Prado</td>\n",
+       "      <td>Ana</td>\n",
+       "      <td>Reposteria</td>\n",
+       "      <td>68</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Chavez</td>\n",
+       "      <td>Jose</td>\n",
+       "      <td>Futbol</td>\n",
        "      <td>72</td>\n",
-       "      <td>1.67</td>\n",
+       "      <td>1.77</td>\n",
        "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Ramos</td>\n",
-       "      <td>Raul</td>\n",
-       "      <td>Ajedrez</td>\n",
+       "      <th>13</th>\n",
+       "      <td>Moreno</td>\n",
+       "      <td>Julia</td>\n",
+       "      <td>Basquet</td>\n",
+       "      <td>68</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Borja</td>\n",
+       "      <td>Pablo</td>\n",
+       "      <td>Futbol</td>\n",
        "      <td>70</td>\n",
-       "      <td>1.64</td>\n",
+       "      <td>1.73</td>\n",
        "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Mejia</td>\n",
+       "      <td>Jesica</td>\n",
+       "      <td>Voley</td>\n",
+       "      <td>68</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Serrano</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Vazquez</td>\n",
+       "      <td>Jose</td>\n",
+       "      <td>Voley</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Delgado</td>\n",
+       "      <td>Vanesa</td>\n",
+       "      <td>Basquet</td>\n",
+       "      <td>63</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "3    Castillo  Daniel           Ajedrez        75         1.61    M\n",
-       "6     Navarro   Julio           Ajedrez        62         1.68    M\n",
-       "24    Jimenez    Luis           Ajedrez        70         1.65    M\n",
-       "26  Fernandez  Miguel           Ajedrez        72         1.67    M\n",
-       "27      Ramos    Raul           Ajedrez        70         1.64    M"
+       "   Apellido   Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "0    Molina  Antonio           Basquet        82         1.81    M\n",
+       "4   Garrido     Luis             Voley        74         1.86    M\n",
+       "5    Medina    Laura            Futbol        71         1.76    F\n",
+       "8    Castro    Tania              Judo        71         1.73    F\n",
+       "9     Reyes   Cintia            Musica        62         1.72    F\n",
+       "10    Prado      Ana        Reposteria        68         1.71    F\n",
+       "11   Chavez     Jose            Futbol        72         1.77    M\n",
+       "13   Moreno    Julia           Basquet        68         1.76    F\n",
+       "18    Borja    Pablo            Futbol        70         1.73    M\n",
+       "22    Mejia   Jesica             Voley        68         1.74    F\n",
+       "23  Serrano   Ursula              Judo        64         1.72    F\n",
+       "25  Vazquez     Jose             Voley        67         1.79    M\n",
+       "29  Delgado   Vanesa           Basquet        63         1.77    F"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,41 +205,13 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "# nos da el numero de filas y columnas del dataframe df en este caso (30, 6)\n",
-    "df.shape\n",
+    "\"\"\"  # nos da los valores booleanos (True or False) de los alumnos si su estatura superan 1.70m 0 no\n",
+    "        df['Estatura(m)'] > 1.70    \n",
     "\n",
-    "# nos da la informacion de las 5 primeras filas\n",
-    "df.head()\n",
+    "\"\"\"\n",
     "\n",
-    "# si queremos la info de p.e. 8 primeras filas debemos escribir df.head(8)\n",
-    "df.head(8)\n",
-    "\n",
-    "# nos da la info de las 5 ultimas filas\n",
-    "df.tail()\n",
-    "\n",
-    "# si queremos la info de p.e de las 10 ultimas filas debemos colocar df.tail(10)\n",
-    "df.tail(10)\n",
-    "\n",
-    "# nos da la info de toda la fila con el valor de indice 5\n",
-    "df.loc[5]\n",
-    "\n",
-    "# nos da la info de las filas en un intervalo de indices, en este caso entre el indice 5 al indice 10\n",
-    "df.loc[5:10]\n",
-    "\n",
-    "# nos da la info de todas las filas pero en el intervalo entre las columnas 'Apellido' y 'Aficion principal'\n",
-    "df.loc[:, 'Apellido':'Aficion principal']\n",
-    "\n",
-    "# nos da la info desde la fila de indice 10 a indice 15 de las columnas 'Aficion principal' y 'Estatura(m)'\n",
-    "df.loc[10:15, ['Aficion principal', 'Estatura(m)']]\n",
-    "\n",
-    "# nos da la info de quienes tienen como 'Aficion principal' al Ajedrez en valores booleanos (True o False)\n",
-    "df.loc[:, 'Aficion principal'] == 'Ajedrez'\n",
-    "\n",
-    "# ahora si queremos la info con todos los datos de los que tienen como 'Aficion principal' al Ajedrez\n",
-    "df1 = df.loc[:, 'Aficion principal'] == 'Ajedrez'\n",
-    "df2 = df.loc[df1]\n",
-    "df2\n",
-    "\n"
+    "# Del dataframe original nos genera otro dataframe compuesta solo de los alumnos cuya estatura supera 1.70m\n",
+    "df[df['Estatura(m)'] > 1.70]"
    ]
   }
  ],
