usando mas filtrado de datos con operadores condicionales y logicos

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,24 +35,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Molina</td>\n",
-       "      <td>Antonio</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>82</td>\n",
-       "      <td>1.81</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Garrido</td>\n",
-       "      <td>Luis</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>74</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Medina</td>\n",
@@ -90,15 +72,6 @@
        "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Chavez</td>\n",
-       "      <td>Jose</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Moreno</td>\n",
        "      <td>Julia</td>\n",
@@ -106,15 +79,6 @@
        "      <td>68</td>\n",
        "      <td>1.76</td>\n",
        "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Borja</td>\n",
-       "      <td>Pablo</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -135,15 +99,6 @@
        "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Vazquez</td>\n",
-       "      <td>Jose</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1.79</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Delgado</td>\n",
        "      <td>Vanesa</td>\n",
@@ -157,23 +112,18 @@
        "</div>"
       ],
       "text/plain": [
-       "   Apellido   Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "0    Molina  Antonio           Basquet        82         1.81    M\n",
-       "4   Garrido     Luis             Voley        74         1.86    M\n",
-       "5    Medina    Laura            Futbol        71         1.76    F\n",
-       "8    Castro    Tania              Judo        71         1.73    F\n",
-       "9     Reyes   Cintia            Musica        62         1.72    F\n",
-       "10    Prado      Ana        Reposteria        68         1.71    F\n",
-       "11   Chavez     Jose            Futbol        72         1.77    M\n",
-       "13   Moreno    Julia           Basquet        68         1.76    F\n",
-       "18    Borja    Pablo            Futbol        70         1.73    M\n",
-       "22    Mejia   Jesica             Voley        68         1.74    F\n",
-       "23  Serrano   Ursula              Judo        64         1.72    F\n",
-       "25  Vazquez     Jose             Voley        67         1.79    M\n",
-       "29  Delgado   Vanesa           Basquet        63         1.77    F"
+       "   Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "5    Medina   Laura            Futbol        71         1.76    F\n",
+       "8    Castro   Tania              Judo        71         1.73    F\n",
+       "9     Reyes  Cintia            Musica        62         1.72    F\n",
+       "10    Prado     Ana        Reposteria        68         1.71    F\n",
+       "13   Moreno   Julia           Basquet        68         1.76    F\n",
+       "22    Mejia  Jesica             Voley        68         1.74    F\n",
+       "23  Serrano  Ursula              Judo        64         1.72    F\n",
+       "29  Delgado  Vanesa           Basquet        63         1.77    F"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,13 +155,8 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "\"\"\"  # nos da los valores booleanos (True or False) de los alumnos si su estatura superan 1.70m 0 no\n",
-    "        df['Estatura(m)'] > 1.70    \n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "# Del dataframe original nos genera otro dataframe compuesta solo de los alumnos cuya estatura supera 1.70m\n",
-    "df[df['Estatura(m)'] > 1.70]"
+    "# Filtrado de datos de un dataframe en la cual le pedimos los alumnos cuya estatura sea mayor a 1.70m y sean mujeres \n",
+    "df[(df['Estatura(m)'] > 1.70) & (df['Sexo'] == 'F')]"
    ]
   }
  ],
