usando el metodo iloc

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -26,104 +26,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Apellido</th>\n",
-       "      <th>Nombre</th>\n",
        "      <th>Aficion principal</th>\n",
        "      <th>Peso(Kg)</th>\n",
-       "      <th>Estatura(m)</th>\n",
-       "      <th>Sexo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Medina</td>\n",
-       "      <td>Laura</td>\n",
        "      <td>Futbol</td>\n",
        "      <td>71</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Karaoke</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Castro</td>\n",
-       "      <td>Tania</td>\n",
        "      <td>Judo</td>\n",
        "      <td>71</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Reyes</td>\n",
-       "      <td>Cintia</td>\n",
        "      <td>Musica</td>\n",
        "      <td>62</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Prado</td>\n",
-       "      <td>Ana</td>\n",
-       "      <td>Reposteria</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Moreno</td>\n",
-       "      <td>Julia</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Mejia</td>\n",
-       "      <td>Jesica</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1.74</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Serrano</td>\n",
-       "      <td>Ursula</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Delgado</td>\n",
-       "      <td>Vanesa</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>63</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "5    Medina   Laura            Futbol        71         1.76    F\n",
-       "8    Castro   Tania              Judo        71         1.73    F\n",
-       "9     Reyes  Cintia            Musica        62         1.72    F\n",
-       "10    Prado     Ana        Reposteria        68         1.71    F\n",
-       "13   Moreno   Julia           Basquet        68         1.76    F\n",
-       "22    Mejia  Jesica             Voley        68         1.74    F\n",
-       "23  Serrano  Ursula              Judo        64         1.72    F\n",
-       "29  Delgado  Vanesa           Basquet        63         1.77    F"
+       "  Aficion principal  Peso(Kg)\n",
+       "5            Futbol        71\n",
+       "6           Ajedrez        62\n",
+       "7           Karaoke        77\n",
+       "8              Judo        71\n",
+       "9            Musica        62"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +101,38 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "# Filtrado de datos de un dataframe en la cual le pedimos los alumnos cuya estatura sea mayor a 1.70m y sean mujeres \n",
-    "df[(df['Estatura(m)'] > 1.70) & (df['Sexo'] == 'F')]"
+    "# devuelve la segunda fila, osea la fila de indice 1\n",
+    "df.iloc[1]\n",
+    "\n",
+    "# devuelve la ultima fila\n",
+    "df.iloc[-1]\n",
+    "\n",
+    "# devuelve la primera columna\n",
+    "df.iloc[:, 0]\n",
+    "\n",
+    "# devuelve la segunda columna\n",
+    "df.iloc[:, 1]\n",
+    "\n",
+    "# devuelve la ultima columna\n",
+    "df.iloc[:, -1]\n",
+    "\n",
+    "# devuelve las tres primeras fila, tambien se puede usar df.iloc[0:3]\n",
+    "df.iloc[ :3] \n",
+    "\n",
+    "# devuelve las tres primeras columnas, tambien se puede usar df.iloc[:, :3]\n",
+    "df.iloc[:, 0:3]\n",
+    "\n",
+    "# devuelve la primera, tercera y quinta fila\n",
+    "df.iloc[[0,2,4]]\n",
+    "\n",
+    "# devuelve la primera, tercera y quinta columna\n",
+    "df.iloc[:,[0,2,4]]\n",
+    "\n",
+    "# devuelve desde la sexta fila (indice 5) hasta la decima fila (indice 10) y todas las columnas \n",
+    "df.iloc[5:10,:]\n",
+    "\n",
+    "# devuelve desde la sexta fila (indice 5) hasta la decima fila (indice 10) y las columnas desde indice 2 hasta indice 3\n",
+    "df.iloc[5:10, 2:4]"
    ]
   }
  ],
