--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,50 +26,231 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Apellido</th>\n",
+       "      <th>Estatura(m)</th>\n",
        "      <th>Aficion principal</th>\n",
-       "      <th>Peso(Kg)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Molina</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>Basquet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Muñoz</td>\n",
+       "      <td>1.65</td>\n",
        "      <td>Futbol</td>\n",
-       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rubio</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>Informatica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Garrido</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>Voley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Medina</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>Futbol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>Navarro</td>\n",
+       "      <td>1.68</td>\n",
        "      <td>Ajedrez</td>\n",
-       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>Morales</td>\n",
+       "      <td>1.65</td>\n",
        "      <td>Karaoke</td>\n",
-       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>Castro</td>\n",
+       "      <td>1.73</td>\n",
        "      <td>Judo</td>\n",
-       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>Reyes</td>\n",
+       "      <td>1.72</td>\n",
        "      <td>Musica</td>\n",
-       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Prado</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>Reposteria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Chavez</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>Futbol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Vega</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>Informatica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Moreno</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>Basquet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Escobar</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>Karaoke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Alvarado</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>Musica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Zegarra</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>Judo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Costa</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>Teatro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Borja</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>Futbol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Romero</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>Karaoke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Gomez</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>Lectura</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Ruiz</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>Futbol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Mejia</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>Voley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Serrano</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>Judo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Jimenez</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Vazquez</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>Voley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Fernandez</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Ramos</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Rodriguez</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>Karaoke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Delgado</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>Basquet</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Aficion principal  Peso(Kg)\n",
-       "5            Futbol        71\n",
-       "6           Ajedrez        62\n",
-       "7           Karaoke        77\n",
-       "8              Judo        71\n",
-       "9            Musica        62"
+       "     Apellido  Estatura(m) Aficion principal\n",
+       "0      Molina         1.81           Basquet\n",
+       "1       Muñoz         1.65            Futbol\n",
+       "2       Rubio         1.63       Informatica\n",
+       "3    Castillo         1.61           Ajedrez\n",
+       "4     Garrido         1.86             Voley\n",
+       "5      Medina         1.76            Futbol\n",
+       "6     Navarro         1.68           Ajedrez\n",
+       "7     Morales         1.65           Karaoke\n",
+       "8      Castro         1.73              Judo\n",
+       "9       Reyes         1.72            Musica\n",
+       "10      Prado         1.71        Reposteria\n",
+       "11     Chavez         1.77            Futbol\n",
+       "12       Vega         1.60       Informatica\n",
+       "13     Moreno         1.76           Basquet\n",
+       "14    Escobar         1.58           Karaoke\n",
+       "15   Alvarado         1.69            Musica\n",
+       "16    Zegarra         1.67              Judo\n",
+       "17      Costa         1.62            Teatro\n",
+       "18      Borja         1.73            Futbol\n",
+       "19     Romero         1.61           Karaoke\n",
+       "20      Gomez         1.62           Lectura\n",
+       "21       Ruiz         1.65            Futbol\n",
+       "22      Mejia         1.74             Voley\n",
+       "23    Serrano         1.72              Judo\n",
+       "24    Jimenez         1.65           Ajedrez\n",
+       "25    Vazquez         1.79             Voley\n",
+       "26  Fernandez         1.67           Ajedrez\n",
+       "27      Ramos         1.64           Ajedrez\n",
+       "28  Rodriguez         1.68           Karaoke\n",
+       "29    Delgado         1.77           Basquet"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,38 +282,20 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "# devuelve la segunda fila, osea la fila de indice 1\n",
-    "df.iloc[1]\n",
+    "# Si hacemos esto nos crea una serie donde los elementos de la serie son los elementos de la columna 'Apellido' \n",
+    "df['Apellido']\n",
     "\n",
-    "# devuelve la ultima fila\n",
-    "df.iloc[-1]\n",
+    "# el resultado es \"pandas.core.series.Series\"\n",
+    "type(df['Apellido'])\n",
     "\n",
-    "# devuelve la primera columna\n",
-    "df.iloc[:, 0]\n",
+    "# En este caso te crea un dataframe con las dos columnas que le solicitamos\n",
+    "dataframe1 = df[['Apellido', 'Estatura(m)']]\n",
     "\n",
-    "# devuelve la segunda columna\n",
-    "df.iloc[:, 1]\n",
+    "# Y en este otro caso nos crea otro dataframe con las columnas que le solicitamos, y en el mismo orden que le pedimos \n",
+    "dataframe2 = df[['Apellido', 'Estatura(m)', 'Aficion principal']]\n",
+    "dataframe2\n",
     "\n",
-    "# devuelve la ultima columna\n",
-    "df.iloc[:, -1]\n",
-    "\n",
-    "# devuelve las tres primeras fila, tambien se puede usar df.iloc[0:3]\n",
-    "df.iloc[ :3] \n",
-    "\n",
-    "# devuelve las tres primeras columnas, tambien se puede usar df.iloc[:, :3]\n",
-    "df.iloc[:, 0:3]\n",
-    "\n",
-    "# devuelve la primera, tercera y quinta fila\n",
-    "df.iloc[[0,2,4]]\n",
-    "\n",
-    "# devuelve la primera, tercera y quinta columna\n",
-    "df.iloc[:,[0,2,4]]\n",
-    "\n",
-    "# devuelve desde la sexta fila (indice 5) hasta la decima fila (indice 10) y todas las columnas \n",
-    "df.iloc[5:10,:]\n",
-    "\n",
-    "# devuelve desde la sexta fila (indice 5) hasta la decima fila (indice 10) y las columnas desde indice 2 hasta indice 3\n",
-    "df.iloc[5:10, 2:4]"
+    "\n"
    ]
   }
  ],
