usando el metodo 'where' para filtrar datos segun la(s) condicion(es) que le pidamos

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -377,9 +377,12 @@
     "\n",
     "\"\"\" El metodo where sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
     "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no se\n",
-    "    rellenaran con valores NaN\"\"\"\n",
-    "dataframe_filtrado = df.where(df['Peso(Kg)'] > 70 )\n",
+    "    rellenaran con valores NaN\n",
+    "    En este caso le pedimos que nos devuelva un nuevo dataframe con los datos de los alumnos cuyo peso sea mayor a 70 kg\"\"\"\n",
+    "dataframe_filtrado = df.where(df['Peso(Kg)'] > 70 ) \n",
     "dataframe_filtrado\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
